# TASTE

./: .gitignore  AGENTS.md  CLAUDE.md  FETCHING_FIX_HANDOFF.md  PROJECT_STATE.md  README.en.md  README.md  SECURITY.md  START_HERE.md  config.example.json
framework/: .gitignore  README.en.md  README.md  pyproject.toml  requirements.txt  script_manifest.json  工作状态.txt
framework/auto_research/: models.py  module_boundaries.py  paths.py
framework/resources/: README.md
framework/resources/automation/: subagent_roles.json
framework/resources/prompts/: gap_finder.md  paper_reviewer.md
framework/resources/templates/: paper_draft.md  paper_review_packet.md  project.json
framework/scripts/: agent_state.py  audit_framework_content_coupling.py  audit_pipeline_runnability.py  audit_research_trajectory_capabilities.py  audit_workflow_connectivity.py  build_research_trajectory_system.py  check_llm_ready.py  claude_project_session.py  compile_prompt.py  create_project.py  detect_machine_profile.py  generate_handoff.py  init_project.py  init_workspace.py  list_projects.py  literature_policy.py  main.py  pipeline_guard.py  project_config.py  project_paths.py  record_safe_unblock_web_job.py  refresh_index_and_log.py  refresh_project_reports.py  report_status.py  research_healthcheck.py  research_manifest.py  run_autonomous_research.py  run_autoscientist_continuous.py  run_autoscientist_supervisor.py  run_evoscientist_style_cycle.py  run_frontend.py  run_full_research_cycle.py  run_in_conda.sh  run_module.py  run_project.py  run_research_trajectory_supervisor.py  run_supervision_tick.py  runtime_env.py  script_path_mapping.json  setup_git_guardrails.py  (+6 more)
framework/scripts/auto_research/: emailer.py  environment_bridge.py  finding_catalog.py  ideation_bridge.py  markdown.py  models.py  module_boundaries.py  paper_state.py  paths.py  planning_bridge.py  project_bridge.py  reading_bridge.py  resource_locks.py  source_selection.py  (+1 more)
modules/taste/: .gitignore  README.en.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
(+797 files in other folders)
