[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taste-research"
version = "0.1.0"
description = "TASTE: a local AI research copilot for paper discovery, triage, idea generation, and research planning"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "openai>=1.30.0",
  "pydantic>=2.5.0",
  "PyMuPDF>=1.23.0",
  "python-multipart>=0.0.9",
  "requests>=2.31.0",
  "uvicorn[standard]>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_research*"]

[tool.setuptools.package-data]
auto_research = ["data/**/*.json"]
